exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/*\"} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/\"} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"*\"} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"./\"} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\"} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"]} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"]} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"]} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\"} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\"} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/*\"} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/\"} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"*\"} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"./\"} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\"} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"]} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"]} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"]} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\"} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\"} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/*\"} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/\"} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"*\"} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"./\"} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\"} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"]} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"]} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"]} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\"} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\"} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/*\"} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/\"} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\"} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"*\"} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"./\"} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\"} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"]} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"]} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"]} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\"} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\"} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - default follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\"} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":true} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":true} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":true} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":true} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":true} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":true} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":true} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":false} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli with --force=node: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":false} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > cli: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":false} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic with nodeZip: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/*/*.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/fixtures/subdir-symlink/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/*\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/.dotfile",
  "/fixtures/file-symlink.txt",
  "/fixtures/file.txt",
  "/fixtures/multiline.txt",
  "/fixtures/obama.jpg",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/fixtures/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/\",\"source\":\"fixtures/subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/fixtures",
  "/fixtures/subdir",
  "/fixtures/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"*\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"./\",\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file-symlink.txt",
  "/file.txt",
  "/multiline.txt",
  "/obama.jpg",
  "/subdir",
  "/subdir/subfile.txt",
  "/subdir-symlink",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures/\",\"source\":\"file-symlink.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file-symlink.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures/subdir\",\"source\":\"../file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\".dotfile\"],\"followSymLinks\":false} 1`] = `
[
  "/.dotfile",
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"obama.jpg\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":[\"file.txt\",\"subdir\"],\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"file.txt\",\"followSymLinks\":false} 1`] = `
[
  "/file.txt",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"obama.jpg\",\"followSymLinks\":false} 1`] = `
[
  "/obama.jpg",
  "/test.zip"
]
`;

exports[`file structure - no follow symlinks > programmatic: {\"cwd\":\"test/fixtures\",\"source\":\"subdir/subfile.txt\",\"followSymLinks\":false} 1`] = `
[
  "/subdir",
  "/subdir/subfile.txt",
  "/test.zip"
]
`;
